--- a/client-app/package.json
+++ b/client-app/package.json
@@ -17,8 +17,9 @@
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^6.2.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.3",
     "typescript": "^4.8.4",
@@ -50,7 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.2",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4"
   }
 }
